--- a/static/app.css
+++ b/static/app.css
@@ -6,3 +6,7 @@ body {
     background-color: transparent;
     background-image: url("../static/raindrops-animate.svg");
 }
+.MysteryBox{
+background-image: url("/static/MarioBlock.svg");
+
+}
